форум и новые темы

--- a/app/ob/forum/templates/forum/forum.html
+++ b/app/ob/forum/templates/forum/forum.html
@@ -2,139 +2,188 @@
 {% load static %} 
 
 {% block content %}
-<div style="outline: 2px solid #979797;">
-   <div style="outline: 2px solid #979797;margin-top: 1%">
-   <h3 align=left>Магазин<a href=""><button style="margin-bottom: 1%;margin-left: 5%" type="button" class="btn btn-light">Создать новую тему</button></a></h3>
-   </div>
-    <table style="width: 100%;">
-       <thead style="background: #EDEEF0">
-        <tr>
-         <td align=center style="width: 15%;"> Дата </td>
-         <td align=center style="width: 10%;"> Пользователь </td>
-         <td align=center style="width: 40%;"> Заголовок </td>
-         <td align=center style="width: 15%;"> Доп.Инфо. </td>
-         <td align=center style="width: 10%;"> Сообщений </td> 
-         <td align=center style="width: 10%;"> Просмотров </td> 
-        </tr>
-       </thead>
-       <tbody style="background: #F7F7F7">
-        <tr>
-         <td align=center><p>11.11.11</p></td>
-         <td align=center><p>Тот кто задал вопрос</p></td> 
-         <td align=center><p>Трындец</p></td> 
-         <td align=center><p><a href="{{ order.get_absolute_url }}"><button  class="btn btn-outline-dark">Подробнее</button></a></p></td>
-         <td align=center><p>12</p></td> 
-         <td align=center><p>88000</p></td>  
-        </tr>
-       </tbody>
-    </table>
-</div>
-<div style="outline: 2px solid #979797;">
-   <div style="outline: 2px solid #979797;margin-top: 1%">
-   <h3 align=left>Проектировщики<a href=""><button style="margin-bottom: 1%;margin-left: 5%" type="button" class="btn btn-light">Создать новую тему</button></a></h3>
-   </div>
-    <table style="width: 100%;">
-       <thead style="background: #EDEEF0">
-        <tr>
-         <td align=center style="width: 15%;"> Дата </td>
-         <td align=center style="width: 10%;"> Пользователь </td>
-         <td align=center style="width: 40%;"> Заголовок </td>
-         <td align=center style="width: 15%;"> Доп.Инфо. </td>
-         <td align=center style="width: 10%;"> Сообщений </td> 
-         <td align=center style="width: 10%;"> Просмотров </td> 
-        </tr>
-       </thead>
-       <tbody style="background: #F7F7F7">
-        <tr>
-         <td align=center><p>11.11.11</p></td>
-         <td align=center><p>Тот кто задал вопрос</p></td> 
-         <td align=center><p>Трындец</p></td> 
-         <td align=center><p><a href="{{ order.get_absolute_url }}"><button  class="btn btn-outline-dark">Подробнее</button></a></p></td>
-         <td align=center><p>12</p></td> 
-         <td align=center><p>88000</p></td>  
-        </tr>
-       </tbody>
-    </table>
-</div>
-<div style="outline: 2px solid #979797;">
-   <div style="outline: 2px solid #979797;margin-top: 1%">
-   <h3 align=left>Дизайнеры<a href=""><button style="margin-bottom: 1%;margin-left: 5%" type="button" class="btn btn-light">Создать новую тему</button></a></h3>
-   </div>
-    <table style="width: 100%;">
-       <thead style="background: #EDEEF0">
-        <tr>
-         <td align=center style="width: 15%;"> Дата </td>
-         <td align=center style="width: 10%;"> Пользователь </td>
-         <td align=center style="width: 40%;"> Заголовок </td>
-         <td align=center style="width: 15%;"> Доп.Инфо. </td>
-         <td align=center style="width: 10%;"> Сообщений </td> 
-         <td align=center style="width: 10%;"> Просмотров </td> 
-        </tr>
-       </thead>
-       <tbody style="background: #F7F7F7">
-        <tr>
-         <td align=center><p>11.11.11</p></td>
-         <td align=center><p>Тот кто задал вопрос</p></td> 
-         <td align=center><p>Трындец</p></td> 
-         <td align=center><p><a href="{{ order.get_absolute_url }}"><button  class="btn btn-outline-dark">Подробнее</button></a></p></td>
-         <td align=center><p>12</p></td> 
-         <td align=center><p>88000</p></td>  
-        </tr>
-       </tbody>
-    </table>
-</div>
-<div style="outline: 2px solid #979797;">
-   <div style="outline: 2px solid #979797;margin-top: 1%">
-   <h3 align=left>Мебельщики<a href=""><button style="margin-bottom: 1%;margin-left: 5%" type="button" class="btn btn-light">Создать новую тему</button></a></h3>
-   </div>
-    <table style="width: 100%;">
-       <thead style="background: #EDEEF0">
-        <tr>
-         <td align=center style="width: 15%;"> Дата </td>
-         <td align=center style="width: 10%;"> Пользователь </td>
-         <td align=center style="width: 40%;"> Заголовок </td>
-         <td align=center style="width: 15%;"> Доп.Инфо. </td>
-         <td align=center style="width: 10%;"> Сообщений </td> 
-         <td align=center style="width: 10%;"> Просмотров </td> 
-        </tr>
-       </thead>
-       <tbody style="background: #F7F7F7">
-        <tr>
-         <td align=center><p>11.11.11</p></td>
-         <td align=center><p>Тот кто задал вопрос</p></td> 
-         <td align=center><p>Трындец</p></td> 
-         <td align=center><p><a href="{{ order.get_absolute_url }}"><button  class="btn btn-outline-dark">Подробнее</button></a></p></td>
-         <td align=center><p>12</p></td> 
-         <td align=center><p>88000</p></td>  
-        </tr>
-       </tbody>
-    </table>
-</div>
-<div style="outline: 2px solid #979797;">
-   <div style="outline: 2px solid #979797;margin-top: 1%">
-   <h3 align=left>Столяра<a href=""><button style="margin-bottom: 1%;margin-left: 5%" type="button" class="btn btn-light">Создать новую тему</button></a></h3>
-   </div>
-    <table style="width: 100%;">
-       <thead style="background: #EDEEF0">
-        <tr>
-         <td align=center style="width: 15%;"> Дата </td>
-         <td align=center style="width: 10%;"> Пользователь </td>
-         <td align=center style="width: 40%;"> Заголовок </td>
-         <td align=center style="width: 15%;"> Доп.Инфо. </td>
-         <td align=center style="width: 10%;"> Сообщений </td> 
-         <td align=center style="width: 10%;"> Просмотров </td> 
-        </tr>
-       </thead>
-       <tbody style="background: #F7F7F7">
-        <tr>
-         <td align=center><p>11.11.11</p></td>
-         <td align=center><p>Тот кто задал вопрос</p></td> 
-         <td align=center><p>Трындец</p></td> 
-         <td align=center><p><a href="{{ order.get_absolute_url }}"><button  class="btn btn-outline-dark">Подробнее</button></a></p></td>
-         <td align=center><p>12</p></td> 
-         <td align=center><p>88000</p></td>  
-        </tr>
-       </tbody>
-    </table>
+<div class="container-fluid">
+<div class="row">
+    <div class="col-md-10 col-lg-10">
+        <div style="outline: 2px solid #979797;margin-top: 2%">
+          <div style="outline: 2px solid #979797;">
+            <div style="position:relative;float: left">
+                <h3>Магазин</h3>
+            </div>
+            <div style="position:relative;float: right">
+                <a href="{% url 'forum_list_url' %}"><button type="button" class="btn btn-outline-secondary">Создать новую тему</button></a>
+            </div>
+           </div>
+            <table style="width: 100%;">
+               <thead style="background: #EDEEF0">
+                <tr>
+                 <td align=center style="width: 15%;"> Дата </td>
+                 <td align=center style="width: 10%;"> Пользователь </td>
+                 <td align=center style="width: 40%;"> Заголовок </td>
+                 <td align=center style="width: 15%;"> Доп.Инфо. </td>
+                 <td align=center style="width: 10%;"> Сообщений </td> 
+                 <td align=center style="width: 10%;"> Просмотров </td> 
+                </tr>
+               </thead>
+               {% for post in posts%}
+               <tbody style="background: #F7F7F7">
+                <tr>
+                 <td align=center><p>{{post.date_pud}}</p></td>
+                 <td align=center><p>{{post.user}}</p></td> 
+                 <td align=center><p>{{post.title}}</p></td> 
+                 <td align=center><a href=""><button class="btn btn-outline-dark">Подробнее</button></a></td>
+                 <td align=center><p>{{post.massenge}}</p></td> 
+                 <td align=center><p>{{post.views}}</p></td>  
+                </tr>
+               </tbody>
+               {% endfor %}
+            </table>
+        </div>
+        <div style="outline: 2px solid #979797;margin-top: 2%">
+           <div style="outline: 2px solid #979797;">
+            <div style="position:relative;float: left">
+                <h3>Проектировщики</h3>
+            </div>
+            <div style="position:relative;float: right">
+                <a href="{% url 'forum_list_url' %}"><button type="button" class="btn btn-outline-secondary">Создать новую тему</button></a>
+            </div>
+           </div>
+            <table style="width: 100%;">
+               <thead style="background: #EDEEF0">
+                <tr>
+                 <td align=center style="width: 15%;"> Дата </td>
+                 <td align=center style="width: 10%;"> Пользователь </td>
+                 <td align=center style="width: 40%;"> Заголовок </td>
+                 <td align=center style="width: 15%;"> Доп.Инфо. </td>
+                 <td align=center style="width: 10%;"> Сообщений </td> 
+                 <td align=center style="width: 10%;"> Просмотров </td> 
+                </tr>
+               </thead>
+               <tbody style="background: #F7F7F7">
+                <tr>
+                 <td align=center><p>11.11.11</p></td>
+                 <td align=center><p>Тот кто задал вопрос</p></td> 
+                 <td align=center><p>Трындец</p></td> 
+                 <td align=center><a href="{{ order.get_absolute_url }}"><button  class="btn btn-outline-dark">Подробнее</button></a></td>
+                 <td align=center><p>12</p></td> 
+                 <td align=center><p>88000</p></td>  
+                </tr>
+               </tbody>
+            </table>
+        </div>
+        <div style="outline: 2px solid #979797;margin-top: 2%">
+           <div style="outline: 2px solid #979797;">
+            <div style="position:relative;float: left">
+                <h3>Дизайнеры</h3>
+            </div>
+            <div style="position:relative;float: right">
+                <a href="{% url 'forum_list_url' %}"><button type="button" class="btn btn-outline-secondary">Создать новую тему</button></a>
+            </div>
+           </div>
+            <table style="width: 100%;">
+               <thead style="background: #EDEEF0">
+                <tr>
+                 <td align=center style="width: 15%;"> Дата </td>
+                 <td align=center style="width: 10%;"> Пользователь </td>
+                 <td align=center style="width: 40%;"> Заголовок </td>
+                 <td align=center style="width: 15%;"> Доп.Инфо. </td>
+                 <td align=center style="width: 10%;"> Сообщений </td> 
+                 <td align=center style="width: 10%;"> Просмотров </td> 
+                </tr>
+               </thead>
+               <tbody style="background: #F7F7F7">
+                <tr>
+                 <td align=center><p>11.11.11</p></td>
+                 <td align=center><p>Тот кто задал вопрос</p></td> 
+                 <td align=center><p>Трындец</p></td> 
+                 <td align=center><p><a href="{{ order.get_absolute_url }}"><button  class="btn btn-outline-dark">Подробнее</button></a></p></td>
+                 <td align=center><p>12</p></td> 
+                 <td align=center><p>88000</p></td>  
+                </tr>
+               </tbody>
+            </table>
+        </div>
+        <div style="outline: 2px solid #979797;margin-top: 2%">
+           <div style="outline: 2px solid #979797;">
+            <div style="position:relative;float: left">
+                <h3>Мебельщики</h3>
+            </div>
+            <div style="position:relative;float: right">
+                <a href="{% url 'forum_list_url' %}"><button type="button" class="btn btn-outline-secondary">Создать новую тему</button></a>
+            </div>
+           </div>
+            <table style="width: 100%;">
+               <thead style="background: #EDEEF0">
+                <tr>
+                 <td align=center style="width: 15%;"> Дата </td>
+                 <td align=center style="width: 10%;"> Пользователь </td>
+                 <td align=center style="width: 40%;"> Заголовок </td>
+                 <td align=center style="width: 15%;"> Доп.Инфо. </td>
+                 <td align=center style="width: 10%;"> Сообщений </td> 
+                 <td align=center style="width: 10%;"> Просмотров </td> 
+                </tr>
+               </thead>
+               <tbody style="background: #F7F7F7">
+                <tr>
+                 <td align=center><p>11.11.11</p></td>
+                 <td align=center><p>Тот кто задал вопрос</p></td> 
+                 <td align=center><p>Трындец</p></td> 
+                 <td align=center><p><a href="{{ order.get_absolute_url }}"><button  class="btn btn-outline-dark">Подробнее</button></a></p></td>
+                 <td align=center><p>12</p></td> 
+                 <td align=center><p>88000</p></td>  
+                </tr>
+               </tbody>
+            </table>
+        </div>
+        <div style="outline: 2px solid #979797;margin-top: 2%">
+           <div style="outline: 2px solid #979797;">
+            <div style="position:relative;float: left">
+                <h3>Столяра</h3>
+            </div>
+            <div style="position:relative;float: right">
+                <a href="{% url 'forum_list_url' %}"><button type="button" class="btn btn-outline-secondary">Создать новую тему</button></a>
+            </div>
+           </div>
+            <table style="width: 100%;">
+               <thead style="background: #EDEEF0">
+                <tr>
+                 <td align=center style="width: 15%;"> Дата </td>
+                 <td align=center style="width: 10%;"> Пользователь </td>
+                 <td align=center style="width: 40%;"> Заголовок </td>
+                 <td align=center style="width: 15%;"> Доп.Инфо. </td>
+                 <td align=center style="width: 10%;"> Сообщений </td> 
+                 <td align=center style="width: 10%;"> Просмотров </td> 
+                </tr>
+               </thead>
+               <tbody style="background: #F7F7F7">
+                <tr>
+                 <td align=center><p>11.11.11</p></td>
+                 <td align=center><p>Тот кто задал вопрос</p></td> 
+                 <td align=center><p>Трындец</p></td> 
+                 <td align=center><p><a href="{{ order.get_absolute_url }}"><button  class="btn btn-outline-dark">Подробнее</button></a></p></td>
+                 <td align=center><p>12</p></td> 
+                 <td align=center><p>88000</p></td>  
+                </tr>
+               </tbody>
+            </table>
+        </div>
+        </div>
+        <div style="background-color: #737373;" align="left" class="col-md-2 col-lg-2" >
+            <div style="margin-top: 5%" class="menu">
+                <div class="fancy-hover">
+                    <a class="a_menu" href="{% url 'home' %}"><i class="fa fa-commenting"></i>Общий чат</a>
+                </div>
+                <div class="fancy-hover">
+                    <a class="a_menu" href="{% url 'shop' %}"><i class="fa fa-users"></i>Друзья</a>
+                </div>
+                <div class="fancy-hover">
+                    <a class="a_menu" href="{% url 'forum_url' %}"><i class="fa fa-envelope-o"></i>Сообщения</a>
+                </div> 
+                <div class="fancy-hover">
+                    <a class="a_menu" href=""><i class="fa fa-comments-o"></i>Создать конференцию</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
