--- a/app/ob/forum/templates/forum/forum_list.html
+++ b/app/ob/forum/templates/forum/forum_list.html
@@ -1,1 +1,23 @@
- 
+{% extends 'templates/base.html' %}
+{% load static %} 
+
+{% block content %}
+<script src="http://js.nicedit.com/nicEdit-latest.js" type="text/javascript"></script>
+<script type="text/javascript">bkLib.onDomLoaded(nicEditors.allTextAreas);</script>
+<div style="margin-top: 3%">
+<h3>Раздел: Магазин</h3>
+<form action="">
+<div style="margin-top: 3%">
+<div class="form-group">
+    <label for="formGroupExampleInput">Заголовок</label>
+    <input style="width: 30%;" type="text" class="form-control" id="formGroupExampleInput" placeholder="Заголовок">
+</div>
+<div class="form-group">
+    <label for="exampleFormControlTextarea1">Текст</label>
+    <textarea style="width: 55%;" name="area1" cols="40" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+</div>
+<button type="submit" class="btn btn-outline-dark">Создать тему</button>
+</div>
+</form>
+</div>
+{% endblock %}
