--- a/app/ob/account/templates/account/register.html
+++ b/app/ob/account/templates/account/register.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div style="margin-top: 5%">
 <div class="card" style="width: 18rem;float:left;margin-left: 13%">
-  <img src="{% static 'img/fiz.png' %}" class="card-img-top" alt="...">
+  <img src="{% static 'img/jur.png' %}" class="card-img-top" alt="...">
   <div class="card-body">
     <a href="{%url 'regjur'%}"><button style="margin-right: 4%" type="button" class="btn btn-outline-dark">Юридическое лицо</button></a>
   </div>
