--- a/app/ob/forum/templates/forum/forum.html
+++ b/app/ob/forum/templates/forum/forum.html
@@ -1,6 +1,8 @@
 {% extends 'templates/base.html' %}
 {% load static %} 
-
+{% block title %}
+Forum
+{% endblock %}
 {% block content %}
 <div class="container-fluid">
 <div class="row">
