--- a/app/ob/shop/templates/shop/shop.html
+++ b/app/ob/shop/templates/shop/shop.html
@@ -1,5 +1,49 @@
 {% extends 'templates/base.html' %}
+{% load static %}
+
+{% block title %}
+Shop
+{% endblock %}
 
 {% block content %}
- 	<h1>Тут юудет магаз =)</h1>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-3 col-lg-3">
+            <div class="card" style="width: 13rem;">
+              <img src="{% static 'img/polka.jpg' %}" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Название товара</h5>
+                <p class="card-text">'Описание товара'</p>
+                <a href="#" class="btn btn-primary">В корзину</a>
+              </div>
+            </div>
+        </div>
+        <div class="col-md-3 col-lg-3" >
+            <div class="card" style="width: 13rem;">
+              <img src="{% static 'img/jur.png' %}" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Название товара</h5>
+                <p class="card-text">Описание товара</p>
+                <a href="#" class="btn btn-primary">В корзину</a>
+              </div>
+            </div>
+        </div>
+        <div class="col-md-3 col-lg-3" >
+            <div class="card" style="width: 13rem;">
+              <img src="{% static 'img/123.png' %}" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Название товара</h5>
+                <p class="card-text">Описание товара</p>
+                <a href="#" class="btn btn-primary">В корзину</a>
+              </div>
+            </div>
+        </div>
+        <div style="background-color: #737373;" align="left" class="col-md-3 col-lg-3" >
+            <h1>Тут Будет Поиск =)</h1>
+        </div>
+    </div>
+    <div align="center">
+        <h1>Тут будет тулбар =)</h1>
+    </div>
+</div>
 {% endblock %}
