--- a/app/ob/templates/base.html
+++ b/app/ob/templates/base.html
@@ -5,8 +5,8 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}"/>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/register.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/lk.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/shop.css' %}"/>
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -18,48 +18,48 @@
 	</title>
 </head>
 <body>
-	<header>
-		{% block autoresation %}
-		<div style="float:right;margin-top: 2%;margin-right: 2%">
-			<a href="{% url 'autorisation' %}"><button type="button" class="btn btn-outline-dark" >Вход</button></a>
-			<a href="{% url 'registration' %}"><button type="button" class="btn btn-outline-dark" >Регистрация</button></a>
-		</div>
-		{% endblock %}
-		<div class="container11"><a class="border-animation" href="{% url 'home' %}">
-			<div class="border-animation__inner"><p class="a_logo">obAna</p></div></a>
-		</div>
-	</header>
-	<section>
-		<div class="container-fluid">
-			<div class="row">
-				<div style="background-color: #737373;min-height: 100vh;" class="col-md-2 col-lg-2">
-					<div style="margin-top: 5%" class="menu">
-						<div class="fancy-hover">
-							<a class="a_menu" href="{% url 'home' %}"><i class="fa fa-home" aria-hidden="true"></i>Главная</a>
-						</div>
-						<div class="fancy-hover">
-							<a class="a_menu" href="{% url 'shop' %}"><i class="fa fa-shopping-cart" aria-hidden="true"></i>Магазин</a>
-						</div>
-						<div class="fancy-hover">
-							<a class="a_menu" href="{% url 'forum_url' %}"><i class="fa fa-comments-o" aria-hidden="true"></i>Форум</a>
-						</div> 
-						<div class="fancy-hover">
-							<a class="a_menu" href=""><i class="fa fa-globe" aria-hidden="true"></i>О нас</a>
-						</div>
-						<div class="fancy-hover">
-							<a class="a_menu" href=""><i class="fa fa-calculator" aria-hidden="true"></i>Калькулятор</a>
-						</div>
-						<div class="fancy-hover">
-							<a class="a_menu" href=""><i class="fa fa-picture-o"></i>Галерея</a>
-						</div>
-					</div>
-				</div>
-				<div  align="center" class="col-md-10 col-lg-10" >
-					{% block content %}
-					Home page content
-					{% endblock %}
-				</div>
-			</div>
-		</div>
+<header>
+    {% block autoresation %}
+    <div style="float:right;margin-top: 2%;margin-right: 2%">
+        <a href=""><button type="button" class="btn btn-outline-dark"><i class="fa fa-shopping-basket"></i>Корзина</button></a>
+        <a href="{% url 'autorisation' %}"><button type="button" class="btn btn-outline-dark" >Вход</button></a>
+        <a href="{% url 'registration' %}"><button type="button" class="btn btn-outline-dark" >Регистрация</button></a>
+    </div>
+    {% endblock %}
+    <div class="container11"><a class="border-animation" href="{% url 'home' %}">
+        <div class="border-animation__inner"><p class="a_logo">obAna</p></div></a>
+    </div>
+</header>
+<div class="container-fluid">
+    <div class="row">
+        <div style="background-color: #737373;min-height: 100vh;" class="col-md-2 col-lg-2">
+            <div style="margin-top: 5%" class="menu">
+                <div class="fancy-hover">
+                    <a class="a_menu" href="{% url 'home' %}"><i class="fa fa-home" aria-hidden="true"></i>Главная</a>
+                </div>
+                <div class="fancy-hover">
+                    <a class="a_menu" href="{% url 'shop' %}"><i class="fa fa-shopping-cart" aria-hidden="true"></i>Магазин</a>
+                </div>
+                <div class="fancy-hover">
+                    <a class="a_menu" href="{% url 'forum_url' %}"><i class="fa fa-comments-o" aria-hidden="true"></i>Форум</a>
+                </div> 
+                <div class="fancy-hover">
+                    <a class="a_menu" href=""><i class="fa fa-globe" aria-hidden="true"></i>О нас</a>
+                </div>
+                <div class="fancy-hover">
+                    <a class="a_menu" href=""><i class="fa fa-calculator" aria-hidden="true"></i>Калькулятор</a>
+                </div>
+                <div class="fancy-hover">
+                    <a class="a_menu" href=""><i class="fa fa-picture-o"></i>Галерея</a>
+                </div>
+            </div>
+        </div>
+        <div  align="center" class="col-md-10 col-lg-10" > 
+            {% block content %}
+            Home page content
+            {% endblock %}
+        </div>
+    </div>
+</div>
 </body>
 </html>
