--- a/app/ob/shop/templates/shop/shop.html
+++ b/app/ob/shop/templates/shop/shop.html
@@ -8,42 +8,46 @@ Shop
 {% block content %}
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-3 col-lg-3">
+        <div class="col-md-9 col-lg-9" style="margin-top: 2%">
             <div class="card" style="width: 13rem;">
               <img src="{% static 'img/polka.jpg' %}" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Название товара</h5>
                 <p class="card-text">'Описание товара'</p>
-                <a href="#" class="btn btn-primary">В корзину</a>
+                <a href="#"><button type="button" class="btn btn-outline-secondary">В корзину</button></a>
               </div>
             </div>
-        </div>
-        <div class="col-md-3 col-lg-3" >
-            <div class="card" style="width: 13rem;">
-              <img src="{% static 'img/jur.png' %}" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Название товара</h5>
-                <p class="card-text">Описание товара</p>
-                <a href="#" class="btn btn-primary">В корзину</a>
-              </div>
-            </div>
-        </div>
-        <div class="col-md-3 col-lg-3" >
-            <div class="card" style="width: 13rem;">
-              <img src="{% static 'img/123.png' %}" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Название товара</h5>
-                <p class="card-text">Описание товара</p>
-                <a href="#" class="btn btn-primary">В корзину</a>
+            <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+              <div class="btn-group mr-2" role="group" aria-label="First group">
+               <button type="button" class="btn btn-secondary"> << </button>
+                <button type="button" class="btn btn-secondary">1</button>
+                <button type="button" class="btn btn-secondary">2</button>
+                <button type="button" class="btn btn-secondary">3</button>
+                <button type="button" class="btn btn-secondary">4</button>
+                <button type="button" class="btn btn-secondary"> >> </button>
               </div>
             </div>
         </div>
         <div style="background-color: #737373;" align="left" class="col-md-3 col-lg-3" >
-            <h1>Тут Будет Поиск =)</h1>
+            <div class="d7">
+                <form>
+                  <input type="text" placeholder="Поиск...">
+                  <button type="submit"></button>
+                </form>
+                <div align="center">
+                    <p>
+                      <a style="margin-top: 10%" class="btn btn-outline-secondary a_menu" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                      <bytton>Настройки поиска</bytton>
+                      </a>
+                    </p>
+                    <div class="collapse" id="collapseExample">
+                      <div class="card card-body">
+                        Настройки
+                      </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-    <div align="center">
-        <h1>Тут будет тулбар =)</h1>
     </div>
 </div>
 {% endblock %}
